<resources>
    <string name="app_name">WifiChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about_company">https://github.com/RUANHAOANDROID</string>
    <string name="about_copyright">52927295@qq.com</string>
    <string name="about_rights">15872744335</string>
    <string name="action_devices">设备列表</string>
    <string name="chat">会话</string>
    <string name="contacts">附近</string>
    <string name="me">个人</string>
    <string name="test_singin">测试登陆</string>
    <string name="test_singout">测试退出</string>
    <string name="cancel_sendvoice">手指上滑，取消发送</string>
    <string name="cancel_sendvoice_step_2">手指松开，取消发送</string>
    <string name="photo">图片</string>
    <string name="video">录像</string>
    <string name="card">名片</string>
    <string name="voice">声音</string>
    <string name="File">文件</string>
    <string name="Share">分享</string>
    <string name="videoCall">视频</string>
    <string name="voiceCall">对讲</string>
    <string name="search">搜索</string>
    <string name="friends">常用联系人</string>
    <string name="setting">设置</string>
    <string name="richscan">扫一扫</string>
    <string name="shake">摇一摇</string>
    <string name="discover_near">附近的人</string>
    <string name="send">发送</string>
    <string name="back">返回</string>
    <string name="watch_back">返回</string>
    <string name="new_news_reminders">消息提醒</string>
    <string name="privates">隐私</string>
    <string name="location">位置</string>
    <string name="videoMeeting">视频</string>
    <string name="textinput">文本</string>
    <string name="common">通用</string>
    <string name="mobile_counter">流量统计</string>
    <string name="about_wechat">关于</string>
    <string name="logout">退出登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="email">邮箱</string>
    <string name="login_string">登录</string>
    <string name="take_vedio">录制</string>
    <string name="recoderbutton">录制</string>
    <string name="choose_from_album">去相册</string>
    <string name="cancel">取消</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="register">注册</string>
    <string name="ok">确定</string>
    <string name="setting_input">输入文字</string>
    <string name="send_request_success">发送请求成功！</string>
    <string name="send_request_fail">发送请求失败！</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="down_speak">按住 说话</string>
    <string name="release_end">松开 结束</string>
    <string name="release_cancel">松开 取消</string>
    <string name="video_recorder_switch_camera">切换</string>
    <string name="video_recorder_start">录制</string>
    <string name="video_recorder_failed_to_start">启动录像时出现异常</string>
    <string name="video_recorder_stop">结束</string>
    <string name="insert_sd_card">请在操作前先插入存储卡</string>
    <string name="title_login">登录</string>
    <string name="title_info">个人资料</string>
    <string name="title_chg">密码修改</string>
    <string name="name">输入警号</string>
    <string name="btn_login">登录</string>
    <string name="btn_logout">退出</string>
    <string name="btn_chg_passwd">修改密码</string>
    <string name="btn_comfirm_chg">确认修改</string>
    <string name="old_passwd">输入原密码</string>
    <string name="new_passwd">输入新密码</string>
    <string name="new_passwd_again">再次输入新密码</string>
    <string name="user_name">用户名</string>
    <string name="userinfo">个人信息</string>
    <string name="userid">警号</string>
    <string name="username">姓名</string>
    <string name="tel">电话</string>
    <string name="unit">部门</string>
    <string name="check_network">正在检测网络</string>
    <string name="no_network">网络异常，请重试</string>
    <string name="error_login">登录出错</string>
    <string name="notification_server_error">服务器暂时无法访问，请稍候重试。</string>
    <string name="error_username_empty">用户名不能为空</string>
    <string name="error_username_length_invalid">用户名长度必须是1到20字符之间</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_password_length_invalid">密码长度必须是1到32字符之间</string>
    <string name="error_save_token">个人信息保存失败</string>
    <string name="error_not_login">尚未登录</string>
    <string name="error_old_password_empty">原密码不能为空</string>
    <string name="error_new_password_empty">新密码不能为空</string>
    <string name="error_match_password_empty">两次输入新密码不相符</string>
    <string name="error_change_password">更改密码失败</string>
    <string name="watch_username">点击输入用户名</string>
    <string name="watch_password">点击输入密码</string>
    <string name="notify_new_msg">您有新消息,请查收</string>
</resources>
