<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wifip2pchat.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_devicelist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/test_singin"/>
    <item
        android:id="@+id/test_singout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/test_singout"/>
        <item
        android:id="@+id/test_255"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="255"/>
</menu>